@@ -3,6 +3,9 @@ Changelog
 
 7.3-dev - (unreleased)
 ----------------------
+* Bug fix: fix popup editing in aggregated edit view for Indicators and
+  Assessments
+  [tiberich #15969]
 
 7.2 - (2013-08-19)
 ------------------
